    - Currently only does initial imports, incremental imports will come later
      I hope.
    - Can automatically grab any packages from snapshot.debian.net.
  * Add a merge-upstream command that allows you to grab a new upstream
    version and merge your packaging changes back in to it.
    - Currently only supports normal mode.
    - Doesn't integrate with uscan yet.

 -- James Westby <jw+debian@jameswestby.net>  Tue, 10 Jul 2007 22:04:44 +0100

bzr-builddeb (0.17) unstable; urgency=low

  [ James Westby ]
  * Pass max_blocks=1 when constructing changelogs as that is all that is
    needed currently. This requires a newer python-debian (0.1.3), so bump the
    version requirements. This would have helped with cases like #429299, but
    Reinhard already fixed that in python-debian.
  * Using .bzr-builddeb/local.conf is now deprected, please move the contents
    to .bzr/branch/branch.conf. The local.conf file will not be read in the
    next version.
  * python-deb822 changed from new classes to old classes in version 0.3.
    Handle the change in API, and bump the dependencies to make sure it will
    work.
  * Fix up Build-Depends and Build-Depends-Indep (thanks lintian).
  * Now require the changelog to be added to the branch with bzr add before
    it will try and read it. This avoids a nasty error.

 -- James Westby <jw+debian@jameswestby.net>  Mon, 18 Jun 2007 22:56:29 +0100

bzr-builddeb (0.16.2) unstable; urgency=low

  * loosen the dependency on bzr. bzr-builddeb seems to be not be broken
    by bzr version 0.17, so remove the upper bound of the dependency.

 -- Reinhard Tartler <siretart@tauware.de>  Tue, 12 Jun 2007 19:45:38 +0100

bzr-builddeb (0.16.1) unstable; urgency=low

  * fix FTBFS by correcting build depends. Thanks to
    "Rob Weir" <rob@weir.id.au> for providing the patch! (Closes: #423745)

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 14 May 2007 14:08:11 +0200

bzr-builddeb (0.16) unstable; urgency=low

  [James Westby]