@@ -21,8 +21,13 @@ bzr-builddeb (0.18) unstable; urgency=low
     version and merge your packaging changes back in to it.
     - Currently only supports normal mode.
     - Doesn't integrate with uscan yet.
+  * Remove the need for --ignore-unknowns, as it is no longer checked for.
+    The option is still there for backwards compatibility, but it now does
+    nothing.
+  * Allow empty author information in the changelog for those that like to
+    develop without filling it in, and then add it while releasing.
 
- -- James Westby <jw+debian@jameswestby.net>  Tue, 10 Jul 2007 22:04:44 +0100
+ -- James Westby <jw+debian@jameswestby.net>  Tue, 10 Jul 2007 22:25:49 +0100
 
 bzr-builddeb (0.17) unstable; urgency=low
 
